--- a/recentProjects.html
+++ b/recentProjects.html
@@ -41,13 +41,9 @@
 
 			<header class="major special">
 				<h2>Recent Projects</h2>
-				<p>MGE's award winning Fuel Tank Stand </p>
 			</header>
 
 
-			<p>
-		
-			</p>
 
 
 			<section id="one" class="wrapper style1">
@@ -55,10 +51,24 @@
 					<article class="feature right">
 						<span class="image"><img alt="" /></span>
 						<div class="content">
-							<h2>Full Service Unit:</h2>
+							<h2>Example:</h2>
 
 							<div class="toCentrePictures">
-								<img src="images/28795473_191445898122407_8012040059354087424_n.jpg"><br>
+								<img src="images/IMG_1327.JPG"><br><br>
+								<img src="images/IMG_1652.JPG"><br><br>
+								<img src="images/IMG_1693.JPG"><br><br>
+								<img src="images/IMG_1748.JPG"><br><br>
+								<img src="images/IMG_1839.JPG"><br><br>
+								<img src="images/IMG_1896.JPG"><br><br>
+								<img src="images/IMG_0818.JPG"><br><br>
+								<img src="images/IMG_1908.JPG"><br><br>
+								<img src="images/IMG_2022.JPG"><br><br>
+								<img src="images/IMG_2291.JPG"><br><br>
+								<img src="images/IMG_2327.JPG"><br><br>
+								<img src="images/IMG_8026.JPG"><br><br>
+								<img src="images/Screenshot 2020-02-16 at 22.52.21.png"><br><br>
+								<img src="images/Screenshot 2020-02-16 at 22.56.06.png"><br><br>
+								<img src="images/Screenshot 2020-02-16 at 22.55.54.png"><br><br>
 							</div>
 						
 
