One final check..

--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
 					<h2>Industrial</h2>
 					<p>Design, supply and erection of Industrial Buildings. We start with the structual steel and go the
 						whole way to completion with roofing, cladding and flashings.</p>
-					<!-- <ul class="actions">
+					<ul class="actions">
 						<li>
-							<a href="#" class="button alt">Industrial Projects</a>
+							<a href="recentProjects.html" class="button alt">See Recent Projects</a>
 						</li>
-					</ul> -->
+					</ul>
 				</div>
 			</article>
 
@@ -130,6 +130,13 @@
 					<p>Supply and fit of Structural Steel for construction projects. Our beams have been used
 						in extensions, for supporting existing structures and for fresh builds.</p>
 				</div>
+
+				<ul class="actions">
+					<li>
+						<a href="recentProjects.html" class="button alt">See Recent Projects</a>
+					</li>
+				</ul>
+
 			</article>
 
 			<article class="feature right">
@@ -140,7 +147,11 @@
 					<p>
 						MGE farm buildings are custom built to your requirements and the highest standard. Call us today to discuss how we can make the best solution for you. 
 					</p>
-			
+					<ul class="actions">
+						<li>
+							<a href="recentProjects.html" class="button alt">See Recent Projects</a>
+						</li>
+					</ul>
 				</div>
 			</article>
 
