--- a/fuelTankStands.html
+++ b/fuelTankStands.html
@@ -118,6 +118,14 @@
 							<br>
 							<br>
 
+							<h2>Tank Access</h2>
+							<div class="toCentrePictures">
+								<img src="images/IMG_0503.JPG"><br>
+							</div>
+
+							<br>
+							<br>
+
 						</div>
 					</article>
 					<iframe width="100%" height="600px" margin="auto 0"
